--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
     <title>Sydney Website Development : Joshua McCluskey</title>
     <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -39,7 +40,7 @@
 </ul>
 
 <h2>Get in touch:</h2>
-<p><a href="+61412765432"><i class="fas fa-phone"></i> +61 412 765 432</a>
+<p><a href="tel:+61412765432"><i class="fas fa-phone"></i> +61 412 765 432</a>
 <p><i class="fas fa-at"></i> io (at) ioio.nu</p>
 <div class="social">
   <a href="https://www.linkedin.com/in/joshuamccluskey/" target="_blank" title="LinkedIn">
