--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <p>Full stack website development and implementation.</p>
 <h3>Frontend Development:</h3>
 <ul>
-  <li>Javascript and React</li>
+  <li>JavaScript and React</li>
   <li>CSS/SASS</li>
   <li>HTML</li>
 </ul>
@@ -31,7 +31,7 @@
   <li>Python and Django</li>
   <li>Node.js</li>
 </ul>
-<h3>Server Administration</h3>
+<h3>Server Administration:</h3>
 <ul>
   <li>Linux (Debian, Ubunut, CentOS, networking and security)</li>
   <li>Nginx and Apache</li>
@@ -59,7 +59,7 @@
   <li>privacy.gov.au</li>
   <li>humanright.gov.au</li>
 </ul>
-<h2>Projects</h2>
+<h2>Projects:</h2>
 <ul>
   <li><a href="https://play.google.com/store/apps/details?id=com.sydneywebdev.wtype" target="_blank">w-type - Android and web game</a></li>
   <li><a href="https://kanjimon.ioio.nu/" target="_blank">kanjimon - Offline japanese dictionary in your browser</a></li>
