--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
         <title>sydneywebdev.com</title>
-        <style type="text/css">
+<style type="text/css">
 body {
     padding: 0;
     margin: 0;
